--- a/GoodExchangeApplication/MyRazorPage/Pages/Chat.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Chat.cshtml
@@ -6,7 +6,7 @@
     Layout = "_Layout";
 }
 
-<h2>Chat</h2>
+@* <h2>Chat</h2>
 
 <div id="chatContainer" style="max-width: 600px; margin: auto;">
     <div id="messagesList" style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
@@ -71,3 +71,4 @@
         });
     </script>
 }
+ *@
