--- a/GoodExchangeApplication/MyRazorPage/Pages/Seller/ProductManagement.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Seller/ProductManagement.cshtml
@@ -119,7 +119,7 @@
                 {
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="~/uploads/@product.Image" class="card-img-top" alt="@product.Title">
+                            <img src="@product.Image" class="card-img-top" alt="@product.Title">
                             <div class="card-body">
                                 <h5 class="card-title">@product.Title</h5>
                                 <p class="card-text">@product.Description</p>
