--- a/GoodExchangeApplication/MyRazorPage/Pages/Homepage/ProductDetailPage.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Homepage/ProductDetailPage.cshtml
@@ -173,7 +173,7 @@
                     <div class="col-lg-7 mt-5">
                         <div class="card">
                             <div class="card-body">
-                                <h1 class="h2">Active Wear</h1>
+                                <h1 class="h2">@json.Title</h1>
 
                                 <p class="h3 py-2">@json.Price</p>
                                @*  <p class="py-2">
