--- a/GoodExchangeApplication/MyRazorPage/Pages/Admin/ReportManagement.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Admin/ReportManagement.cshtml
@@ -16,7 +16,7 @@
                 </tr>
             </thead>
             <tbody>
-                @if (reportData == null)
+               @*  @if (reportData == null)
                 {
                     <tr>
                         <td colspan="5" class="text-center">Loading...</td>
@@ -36,7 +36,7 @@
                             </td>
                         </tr>
                     }
-                }
+                } *@
             </tbody>
         </table>
     </div>
