--- a/GoodExchangeApplication/MyRazorPage/Pages/Admin/AccountManagement.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Admin/AccountManagement.cshtml
@@ -153,8 +153,8 @@
                         <div class="modal-body">
                             <label class="form-label" style="display: block;">
                                 Tên đăng nhập
-                                @* <input class="form-control mt-2" type="text" placeholder="Tên đăng nhập..." asp-for="AddAccount.Username">
-                                <span asp-validation-for="AddAccount.Username" class="text-danger"></span> *@
+                                <input class="form-control mt-2" type="text" placeholder="Tên đăng nhập..." asp-for="AddAccount.Username">
+                                <span asp-validation-for="AddAccount.Username" class="text-danger"></span>
                             </label>
                             <label class="form-label mt-4" style="display: block;">
                                 Mật khẩu
@@ -163,14 +163,14 @@
                             </label>
                             <label class="form-label mt-4" style="display: block;">
                                 Mã câu lạc bộ quản lý
-                                @* <select asp-for="AddAccount.ClubId" class="form-control mt-2">
+                                <select asp-for="AddAccount.ClubId" class="form-control mt-2">
                                     <option value="" selected disabled>-- Chọn mã câu lạc bộ --</option>
                                     @foreach (var club in ViewBag.ClubId)
                                     {
                                         <option value="@club.Value">@club.Value - @club.Text</option>
                                     }
                                 </select>
-                                <span asp-validation-for="AddAccount.ClubId" class="text-danger"></span> *@
+                                <span asp-validation-for="AddAccount.ClubId" class="text-danger"></span>
                             </label>
                         </div>
                         <div class="modal-footer">
